style: fixes dark mode text

--- a/assets/css/dark-styles.scss
+++ b/assets/css/dark-styles.scss
@@ -43,6 +43,13 @@ body{
             color: var(--text)
         }
 
+        .editor-link {
+
+            .btn {
+                color: #333;
+            }
+        }
+
         .chroma {
             background-color: var(--background-body);
 
